--- a/.github/workflows/Build AzerothCore modules for linux.yml
+++ b/.github/workflows/Build AzerothCore modules for linux.yml
@@ -98,11 +98,10 @@ jobs:
           release_name: Build AzerothCore modules for linux ${{ steps.ts.outputs.sh }}（UTC ${{ steps.ts.outputs.utc }}）
           body: |
             ### 自动构建信息 AzerothCore modules
-            - 构建时间：UTC ${{ steps.ts.outputs.utc }}（北京时间 ${{ steps.ts.outputs.sh }}）
+            - 构建时间：UTC ${{ steps.ts.outputs.utc }}
             - 核心分支：${{ env.ACORE_BRANCH }}
             - 成功模块：${{ steps.modules.outputs.success }}
             - 失败模块：${{ steps.modules.outputs.failure || '无' }}
-            - 产物大小：${{ steps.package.outputs.size }}
 
       - name: 上传Release
         uses: actions/upload-release-asset@v1
