Update Build AzerothCore No modules for linux.yml

--- a/.github/workflows/Build AzerothCore No modules for linux.yml
+++ b/.github/workflows/Build AzerothCore No modules for linux.yml
@@ -87,7 +87,7 @@ jobs:
           release_name: "Build AzerothCore No modules for linux ${{ steps.ts.outputs.sh }}"
           body: |
             ### 构建信息 AzerothCore No modules
-            - 构建时间：UTC ${{ steps.ts.outputs.utc }}（北京时间 ${{ steps.ts.outputs.sh }}）
+            - 构建时间：UTC ${{ steps.ts.outputs.utc }}
             - 核心版本：${{ env.ACORE_BRANCH }}
             - 编译类型：${{ env.BUILD_TYPE }}
 
