--- a/.github/workflows/Build AzerothCore modules.yml
+++ b/.github/workflows/Build AzerothCore modules.yml
@@ -1,4 +1,4 @@
-name: Build AzerothCore No modules for linux
+name: Build AzerothCore modules
 on:
   workflow_dispatch:
   schedule:
@@ -86,10 +86,11 @@ jobs:
           tag_name: "build-${{ steps.ts.outputs.date }}-${{ steps.ts.outputs.utc }}"
           release_name: "Build AzerothCore No modules for linux ${{ steps.ts.outputs.sh }}"
           body: |
-            ### 构建信息 AzerothCore No modules
+            ### auto Build AzerothCore modules
             - 构建时间：UTC ${{ steps.ts.outputs.utc }}
-            - 核心版本：${{ env.ACORE_BRANCH }}
-            - 编译类型：${{ env.BUILD_TYPE }}
+            - 核心分支：${{ env.ACORE_BRANCH }}
+            - 成功模块：${{ steps.modules.outputs.success }}
+            - 失败模块：${{ steps.modules.outputs.failure || '无' }}
 
       - name: 上传到Release
         uses: actions/upload-release-asset@v1
