--- a/.github/workflows/Build AzerothCore modules.yml
+++ b/.github/workflows/Build AzerothCore modules.yml
@@ -18,6 +18,12 @@ jobs:
       ACORE_BRANCH: "master"
       BUILD_TYPE: "MinSizeRel"
       MODULES_INPUT: |
+              https://github.com/liyunfan1223/mod-playerbots.git master
+              https://github.com/azerothcore/mod-eluna.git master
+              https://github.com/azerothcore/mod-learn-spells.git master
+              https://github.com/azerothcore/mod-autobalance.git master
+              https://github.com/azerothcore/mod-auto-revive.git master
+              
     steps:
       - name: 安装依赖
         run: |
