--- a/.github/workflows/Build AzerothCore Playerbots.yml
+++ b/.github/workflows/Build AzerothCore Playerbots.yml
@@ -95,7 +95,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
         with:
           tag_name: build-${{ steps.ts.outputs.utc }}
-          release_name: Build AzerothCore modules for linux ${{ steps.ts.outputs.sh }}（UTC ${{ steps.ts.outputs.utc }}）
+          release_name: Auto Build AzerothCore Playerbots ${{ steps.ts.outputs.sh }} 
           body: |
             ### Auto Build AzerothCore Playerbots
             - 构建时间：UTC ${{ steps.ts.outputs.utc }}
