--- a/.github/workflows/Build azerothcore-wotlk.yml
+++ b/.github/workflows/Build azerothcore-wotlk.yml
@@ -90,11 +90,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
         with:
-          tag_name: "build-${{ steps.ts.outputs.date }}-${{ steps.ts.outputs.utc }}"
+          tag_name: "Azerothcore-Wotlk_${{ steps.ts.outputs.date }}"
           release_name: "Auto Build Azerothcore-Wotlk ${{ steps.ts.outputs.sh }}"
           body: |
             ### Auto Build Azerothcore-Wotlk
-            - 构建时间：UTC ${{ steps.ts.outputs.utc }}
             - 核心分支：${{ env.ACORE_BRANCH }}
             - 成功模块：${{ steps.modules.outputs.success }}
             - 失败模块：${{ steps.modules.outputs.failure || '无' }}
