--- a/.github/workflows/Build AzerothCore Playerbots.yml
+++ b/.github/workflows/Build AzerothCore Playerbots.yml
@@ -94,11 +94,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
         with:
-          tag_name: build-${{ steps.ts.outputs.utc }}
+          tag_name: AzerothCore-Playerbots_${{ steps.ts.outputs.utc }}
           release_name: Auto Build AzerothCore Playerbots ${{ steps.ts.outputs.sh }} 
           body: |
             ### Auto Build AzerothCore Playerbots
-            - 构建时间：UTC ${{ steps.ts.outputs.utc }}
             - 核心分支：${{ env.ACORE_BRANCH }}
             - 成功模块：${{ steps.modules.outputs.success }}
             - 失败模块：${{ steps.modules.outputs.failure || '无' }}
