--- a/.github/workflows/Build AzerothCore Playerbots.yml
+++ b/.github/workflows/Build AzerothCore Playerbots.yml
@@ -112,4 +112,11 @@ jobs:
           asset_name: ${{ steps.package.outputs.name }}
           asset_content_type: application/gzip
           path: ${{ steps.package.outputs.name }}
-          retention-days: 1
+
+      - name: 保留最新1个Release
+        uses: dev-drprasad/delete-older-releases@v0.3.4
+        with:
+          keep_latest: 1
+          delete_tags: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
