--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -86,7 +86,7 @@ jobs:
         id: package
         run: |
           # 修正打包路径（原路径存在重复build目录，简化路径）
-          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" "${{ env.INSTALL_DIR }}"
+          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" /home/runner/work/build_azerothcore/build_azerothcore/azerothcore/build/azerothcore/build/install/
           # 使用环境文件方式设置输出（替代set-output）
           echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> "$GITHUB_OUTPUT"
 
