--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -85,8 +85,9 @@ jobs:
       - name: 打包文件
         id: package
         run: |
+          cd /home/runner/work/build_azerothcore/build_azerothcore/azerothcore/build/azerothcore/build/install
           # 修正打包路径（原路径存在重复build目录，简化路径）
-          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" /home/runner/work/build_azerothcore/build_azerothcore/azerothcore/build/azerothcore/build/install/
+          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" ./
           # 使用环境文件方式设置输出（替代set-output）
           echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> "$GITHUB_OUTPUT"
 
@@ -103,12 +104,12 @@ jobs:
             - 失败模块：${{ steps.modules.outputs.failure || '无' }}
           artifacts: "${{ steps.package.outputs.name }}"
           token: ${{ secrets.BUILD_AZEROTHCORE }}
-          replaceArtifacts: true  # 替换同名资产（如果存在）
+          replacesArtifacts: true
 
-      - name: 保留最新2个Release
+      - name: 保留最新1个Release
         uses: dev-drprasad/delete-older-releases@v0.3.4
         with:
-          keep_latest: 2
+          keep_latest: 1
           delete_tags: true
         env:
           GITHUB_TOKEN: ${{ secrets.BUILD_AZEROTHCORE }}
